# conquer_chess

./: .appveyor.yml  .gitignore  .markdownlint.jsonc  .markdownlintignore  .prettierignore  .spellcheck.yml  .textlintrc  .wordlist.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  codecov.yml  cpp_code_style  fonts.qrc  game.cpp  game.h  game.pri  game.pro  game_linux_static.pro  game_resources.qrc  game_view.pri  images.qrc  mkdocs.yml  mlc_config.json  piece.cpp  piece.h  pieces.h  qt_quick_style.xml  sounds.qrc  sounds2.qrc  test_game.cpp  vcpkg.json
.github/ISSUE_TEMPLATE/: report_bug.md
.github/workflows/: check.yaml  check_all_style.yaml  check_build.yaml  check_links.yaml  check_markdown.yaml  create_website.yaml  get_runtime_speed_profile.yml
SFGraphing/include/SFGraphing/: PlotDataSet.h
SFGraphing/src/: PlotDataSet.cpp  SFPlot.cpp
architecture/: README.md
chess-library/docs/: index.md
docs/: README.md  acknowledgements.md  build_and_run.md  code_of_conduct.md  community.md  contributing.md  faq.md  gameplay.md  help_as_audio_artist.md  help_as_beta_tester.md  help_as_developer.md  help_as_graphical_artist.md  index.md  report_a_bug.md  report_a_pre_game_bug.md  report_in_game_bug.md  roadmap.md  videos.md
docs/architecture/: README.md
docs/docs/: README.md  annotated.html  classes.html  dir_000016_000005.html  dir_000023_000007.html  dir_0fc3f8f3ef96ce2d45d66d6e29832317.html  dir_1093e800b2b3248a31fe78d883750aa0.html  dir_1093e800b2b3248a31fe78d883750aa0_dep.map  dir_1093e800b2b3248a31fe78d883750aa0_dep.md5  dir_1412392e0513de4cc2342a1276572bef.html  dir_1412392e0513de4cc2342a1276572bef_dep.map  dir_1412392e0513de4cc2342a1276572bef_dep.md5  dir_176020d63dfd224b93b9d307b12d19ca.html  dir_176020d63dfd224b93b9d307b12d19ca_dep.map  dir_176020d63dfd224b93b9d307b12d19ca_dep.md5  dir_1fb15e4340abdd3b502250fa4927f827.html  dir_1fb15e4340abdd3b502250fa4927f827_dep.map  dir_1fb15e4340abdd3b502250fa4927f827_dep.md5  dir_24dae02372f13dead4429a4c27475031.html  dir_24dae02372f13dead4429a4c27475031_dep.map  dir_24dae02372f13dead4429a4c27475031_dep.md5  dir_286a65e97ab21360019a32076cc5b728.html  dir_286a65e97ab21360019a32076cc5b728_dep.map  dir_286a65e97ab21360019a32076cc5b728_dep.md5  dir_359e8661b3e355e96127151cd946d019.html  dir_359e8661b3e355e96127151cd946d019_dep.map  dir_359e8661b3e355e96127151cd946d019_dep.md5  dir_3d680b6e0a3e78522936563267a9132e.html  dir_3d680b6e0a3e78522936563267a9132e_dep.map  dir_3d680b6e0a3e78522936563267a9132e_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4ffa0a4cb0db482ccd1a2d352354f289.html  dir_5a84c54d8762f8bd605825f4a42e837c.html  dir_5a84c54d8762f8bd605825f4a42e837c_dep.map  dir_5a84c54d8762f8bd605825f4a42e837c_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6e03ab1afb0ec864f4f728b8f48c208f.html  (+298 more)
docs/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  (+102 more)
docs/launch_on_steam/: README.md
docs/rulebook/: README.md
docs/screenshots/: README.md
images/: create_pngs_from_svgs.sh
include/: about.h  about_view.h  about_view_layout.h  action_history.h  action_number.h  active_window_type.h  artwork_textures.h  asserts.h  board_game_textures.h  board_layout.h  board_to_text_options.h  castling_type.h  cc_cli_options.h  ccfwd.h  chess_color.h  chess_move.h  cli_options.h  controls_bar.h  controls_view.h  controls_view_item.h  controls_view_layout.h  delta_t.h  diagnostics_file.h  draw.h  draw_board.h  fen_string.h  fonts.h  fps_clock.h  game.h  game_controller.h  game_coordinate.h  game_info_layout.h  game_info_statistic.h  game_log.h  game_options.h  game_rect.h  game_resources.h  game_speed.h  game_statistic_type.h  game_statistics.h  (+91 more)
resources/: .gitignore  README.md
resources/fonts/: README.md
resources/songs/: README.md
resources/sound_effects/: README.md
resources/steamworks/: README.md  app_icon_16_x_16.tga  app_icon_32_x_32.icns  app_icon_32_x_32.tga
resources/textures/: README.md
resources/textures/artwork/: README.md  create_markdown_table.sh  create_qrc_lines.sh
scripts/: README.md  build_with_cmake.sh  check_layouts.sh  check_steam_install.sh  clean.sh  convert_wkt_to_png.py  create_apparmor_bwrap_file.sh  create_cmake_from_qmake.sh  create_documentation.sh  create_linux_exe.sh  create_windows_exe.sh  get_code_cov.sh  get_runtime_speed_profile.sh  install_shapely.sh  install_steamcmd.sh  make_background_transparent.sh  play_scholars_mate_with_xdotool.R  reduce_safety_levels.sh  rename_faction.sh  restore_safety_levels.sh  run_prettier.sh  run_steamcmd_to_upload.sh  start_mashing_buttons.R  start_mashing_buttons.sh  view_steam_error_log.sh
src/: about.cpp  about_view.cpp  about_view_layout.cpp  action_history.cpp  action_number.cpp  artwork_textures.cpp  asserts.cpp  board_game_textures.cpp  board_layout.cpp  castling_type.cpp  cc_cli_options.cpp  chess_color.cpp  chess_move.cpp  cli_options.cpp  controls_bar.cpp  controls_view.cpp  controls_view_item.cpp  controls_view_layout.cpp  delta_t.cpp  diagnostics_file.cpp  draw.cpp  draw_board.cpp  fen_string.cpp  fonts.cpp  fps_clock.cpp  game.cpp  game_controller.cpp  game_coordinate.cpp  game_info_layout.cpp  game_info_statistic.cpp  game_options.cpp  game_rect.cpp  game_resources.cpp  game_speed.cpp  game_statistic_type.cpp  game_statistics.cpp  game_statistics_in_time.cpp  game_statistics_output_file.cpp  game_statistics_view.cpp  game_statistics_view_layout.cpp  (+87 more)
steam/: .gitignore  README.md  app_build_3873940.vdf  copy_to_steam.sh  depot_build_3873941.vdf  start_steamcmd.sh
(+1375 files in other folders)
